--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 <head>
   <meta charset="utf-8">
-  <title>肚皮叔</title>
+  <title>简单生活</title>
 </head>
 <body>
   <div class="root" id="root"></div>
